examples/test/testpolicy449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy449
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key6: value8
      key4: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value5
          key22: value39
          key15: value4
      podSelector:
        matchLabels:
          key12: value12
